rocksdb/rocksdb/lib/librocksdb.nim


proc rocksdb_checkpoint_object_create*(db: ptr rocksdb_t; errptr: cstringArray): ptr rocksdb_checkpoint_t {.
    cdecl, importc: "rocksdb_checkpoint_object_create", dynlib: librocksdb.}
proc rocksdb_checkpoint_create*(checkpoint: ptr rocksdb_checkpoint_t;
                               checkpoint_dir: cstring;
                               log_size_for_flush: uint64; errptr: cstringArray) {.
    cdecl, importc: "rocksdb_checkpoint_create", dynlib: librocksdb.}
proc rocksdb_checkpoint_object_destroy*(checkpoint: ptr rocksdb_checkpoint_t) {.
    cdecl, importc: "rocksdb_checkpoint_object_destroy", dynlib: librocksdb.}
proc rocksdb_open_and_trim_history*(options: ptr rocksdb_options_t; name: cstring;
                                   num_column_families: cint;
                                   column_family_names: cstringArray;
    column_family_options: ptr ptr rocksdb_options_t; column_family_handles: ptr ptr rocksdb_column_family_handle_t;
                                   trim_ts: cstring; trim_tslen: csize_t;
                                   errptr: cstringArray): ptr rocksdb_t {.cdecl,
    importc: "rocksdb_open_and_trim_history", dynlib: librocksdb.}
proc rocksdb_open_column_families*(options: ptr rocksdb_options_t; name: cstring;
                                  num_column_families: cint;
                                  column_family_names: cstringArray;
    column_family_options: ptr ptr rocksdb_options_t; column_family_handles: ptr ptr rocksdb_column_family_handle_t;
                                  errptr: cstringArray): ptr rocksdb_t {.cdecl,
    importc: "rocksdb_open_column_families", dynlib: librocksdb.}
proc rocksdb_open_column_families_with_ttl*(options: ptr rocksdb_options_t;
    name: cstring; num_column_families: cint; column_family_names: cstringArray;
    column_family_options: ptr ptr rocksdb_options_t;
    column_family_handles: ptr ptr rocksdb_column_family_handle_t; ttls: ptr cint;
    errptr: cstringArray): ptr rocksdb_t {.cdecl, importc: "rocksdb_open_column_families_with_ttl",
                                       dynlib: librocksdb.}
proc rocksdb_open_for_read_only_column_families*(options: ptr rocksdb_options_t;
    name: cstring; num_column_families: cint; column_family_names: cstringArray;
    column_family_options: ptr ptr rocksdb_options_t;
    column_family_handles: ptr ptr rocksdb_column_family_handle_t;
    error_if_wal_file_exists: uint8; errptr: cstringArray): ptr rocksdb_t {.cdecl,
    importc: "rocksdb_open_for_read_only_column_families", dynlib: librocksdb.}
proc rocksdb_open_as_secondary_column_families*(options: ptr rocksdb_options_t;
    name: cstring; secondary_path: cstring; num_column_families: cint;
    column_family_names: cstringArray;
    column_family_options: ptr ptr rocksdb_options_t;
    column_family_handles: ptr ptr rocksdb_column_family_handle_t;
    errptr: cstringArray): ptr rocksdb_t {.cdecl, importc: "rocksdb_open_as_secondary_column_families",
                                       dynlib: librocksdb.}
proc rocksdb_list_column_families*(options: ptr rocksdb_options_t; name: cstring;
                                  lencf: ptr csize_t; errptr: cstringArray): cstringArray {.
    cdecl, importc: "rocksdb_list_column_families", dynlib: librocksdb.}
proc rocksdb_list_column_families_destroy*(list: cstringArray; len: csize_t) {.cdecl,
    importc: "rocksdb_list_column_families_destroy", dynlib: librocksdb.}
proc rocksdb_create_column_family*(db: ptr rocksdb_t;
                                  column_family_options: ptr rocksdb_options_t;
                                  column_family_name: cstring;
                                  errptr: cstringArray): ptr rocksdb_column_family_handle_t {.
    cdecl, importc: "rocksdb_create_column_family", dynlib: librocksdb.}
proc rocksdb_create_column_families*(db: ptr rocksdb_t; column_family_options: ptr rocksdb_options_t;
                                    num_column_families: cint;
                                    column_family_names: cstringArray;
                                    lencfs: ptr csize_t; errptr: cstringArray): ptr ptr rocksdb_column_family_handle_t {.
    cdecl, importc: "rocksdb_create_column_families", dynlib: librocksdb.}
proc rocksdb_create_column_families_destroy*(
    list: ptr ptr rocksdb_column_family_handle_t) {.cdecl,
    importc: "rocksdb_create_column_families_destroy", dynlib: librocksdb.}
proc rocksdb_create_column_family_with_ttl*(db: ptr rocksdb_t;
    column_family_options: ptr rocksdb_options_t; column_family_name: cstring;
    ttl: cint; errptr: cstringArray): ptr rocksdb_column_family_handle_t {.cdecl,
    importc: "rocksdb_create_column_family_with_ttl", dynlib: librocksdb.}
proc rocksdb_drop_column_family*(db: ptr rocksdb_t;
                                handle: ptr rocksdb_column_family_handle_t;
                                errptr: cstringArray) {.cdecl,
    importc: "rocksdb_drop_column_family", dynlib: librocksdb.}
proc rocksdb_column_family_handle_destroy*(a1: ptr rocksdb_column_family_handle_t) {.
    cdecl, importc: "rocksdb_column_family_handle_destroy", dynlib: librocksdb.}
proc rocksdb_column_family_handle_get_id*(
    handle: ptr rocksdb_column_family_handle_t): uint32 {.cdecl,
    importc: "rocksdb_column_family_handle_get_id", dynlib: librocksdb.}
proc rocksdb_column_family_handle_get_name*(
    handle: ptr rocksdb_column_family_handle_t; name_len: ptr csize_t): cstring {.
    cdecl, importc: "rocksdb_column_family_handle_get_name", dynlib: librocksdb.}
proc rocksdb_close*(db: ptr rocksdb_t) {.cdecl, importc: "rocksdb_close",
                                     dynlib: librocksdb.}
proc rocksdb_put*(db: ptr rocksdb_t; options: ptr rocksdb_writeoptions_t; key: cstring;
                 keylen: csize_t; val: cstring; vallen: csize_t; errptr: cstringArray) {.
    cdecl, importc: "rocksdb_put", dynlib: librocksdb.}
proc rocksdb_put_cf*(db: ptr rocksdb_t; options: ptr rocksdb_writeoptions_t;
                    column_family: ptr rocksdb_column_family_handle_t;
                    key: cstring; keylen: csize_t; val: cstring; vallen: csize_t;
                    errptr: cstringArray) {.cdecl, importc: "rocksdb_put_cf",
    dynlib: librocksdb.}
proc rocksdb_delete*(db: ptr rocksdb_t; options: ptr rocksdb_writeoptions_t;
                    key: cstring; keylen: csize_t; errptr: cstringArray) {.cdecl,
    importc: "rocksdb_delete", dynlib: librocksdb.}
proc rocksdb_delete_cf*(db: ptr rocksdb_t; options: ptr rocksdb_writeoptions_t;
                       column_family: ptr rocksdb_column_family_handle_t;
                       key: cstring; keylen: csize_t; errptr: cstringArray) {.cdecl,
    importc: "rocksdb_delete_cf", dynlib: librocksdb.}
proc rocksdb_delete_range_cf*(db: ptr rocksdb_t;
                             options: ptr rocksdb_writeoptions_t;
                             column_family: ptr rocksdb_column_family_handle_t;
                             start_key: cstring; start_key_len: csize_t;
                             end_key: cstring; end_key_len: csize_t;
                             errptr: cstringArray) {.cdecl,
    importc: "rocksdb_delete_range_cf", dynlib: librocksdb.}
proc rocksdb_merge*(db: ptr rocksdb_t; options: ptr rocksdb_writeoptions_t;
                   key: cstring; keylen: csize_t; val: cstring; vallen: csize_t;
                   errptr: cstringArray) {.cdecl, importc: "rocksdb_merge",
    dynlib: librocksdb.}
proc rocksdb_merge_cf*(db: ptr rocksdb_t; options: ptr rocksdb_writeoptions_t;
                      column_family: ptr rocksdb_column_family_handle_t;
                      key: cstring; keylen: csize_t; val: cstring; vallen: csize_t;
                      errptr: cstringArray) {.cdecl, importc: "rocksdb_merge_cf",
    dynlib: librocksdb.}
proc rocksdb_write*(db: ptr rocksdb_t; options: ptr rocksdb_writeoptions_t;
                   batch: ptr rocksdb_writebatch_t; errptr: cstringArray) {.cdecl,
    importc: "rocksdb_write", dynlib: librocksdb.}
##  Returns NULL if not found.  A malloc()ed array otherwise.
##    Stores the length of the array in *vallen.

proc rocksdb_get*(db: ptr rocksdb_t; options: ptr rocksdb_readoptions_t; key: cstring;
                 keylen: csize_t; vallen: ptr csize_t; errptr: cstringArray): cstring {.
    cdecl, importc: "rocksdb_get", dynlib: librocksdb.}
proc rocksdb_get_with_ts*(db: ptr rocksdb_t; options: ptr rocksdb_readoptions_t;
                         key: cstring; keylen: csize_t; vallen: ptr csize_t;
                         ts: cstringArray; tslen: ptr csize_t; errptr: cstringArray): cstring {.
    cdecl, importc: "rocksdb_get_with_ts", dynlib: librocksdb.}
proc rocksdb_get_cf*(db: ptr rocksdb_t; options: ptr rocksdb_readoptions_t;
                    column_family: ptr rocksdb_column_family_handle_t;
                    key: cstring; keylen: csize_t; vallen: ptr csize_t;
                    errptr: cstringArray): cstring {.cdecl,
    importc: "rocksdb_get_cf", dynlib: librocksdb.}
proc rocksdb_get_cf_with_ts*(db: ptr rocksdb_t; options: ptr rocksdb_readoptions_t;
                            column_family: ptr rocksdb_column_family_handle_t;
                            key: cstring; keylen: csize_t; vallen: ptr csize_t;
                            ts: cstringArray; tslen: ptr csize_t;
                            errptr: cstringArray): cstring {.cdecl,
    importc: "rocksdb_get_cf_with_ts", dynlib: librocksdb.}
##  if values_list[i] == NULL and errs[i] == NULL,
##  then we got status.IsNotFound(), which we will not return.
##  all errors except status status.ok() and status.IsNotFound() are returned.
##
##  errs, values_list and values_list_sizes must be num_keys in length,
##  allocated by the caller.
##  errs is a list of strings as opposed to the conventional one error,
##  where errs[i] is the status for retrieval of keys_list[i].
##  each non-NULL errs entry is a malloc()ed, null terminated string.
##  each non-NULL values_list entry is a malloc()ed array, with
##  the length for each stored in values_list_sizes[i].
